General text updates to about, COP, main, pricing.

--- a/views/about.html
+++ b/views/about.html
@@ -6,9 +6,8 @@
   <div class="product-container">
     <div class="section intro">
       <div class="content">
-        Founded in August of 2013, Ontel is a Washington D.C. based LLC that provides software and site-development related management services to telecommunication contractors, engineering firms, real estate specialists, and project management companies. Our team mostly consists of engineers, designers, technicians, and implementation managers. We specialize in applying technology to project and construction management, so we are interested in how people whether in the field or office use technology to colloborate, and bringing the best of these efforts from the world to our clients.  
+        Founded in August of 2013, Ontel is a Washington D.C. based consulting company that provides software and site-development related management services to telecommunication contractors, engineering firms, real estate specialists, and project management companies. We specialize in applying technology to project and construction management, so reach out if you want to talk further about the industry, or technology in general!  
 		
-		Prior to Ontel, we've led sales, operations, and business development within companies ranging from small start up general contractors, to the largest telecommunication engineering companies in the world. Our experience, matched with our obsession to innovate combines into our ability to offer better solutions to our clients at low, fixed costs.
       </div>
     </div>
     <div class="section">
