--- a/views/closeout.html
+++ b/views/closeout.html
@@ -39,7 +39,7 @@
             <div class="title">Results</div>
             <div class="body">
               <ul>
-                <li>Ontel has less than a 3% rejection rate for 2014-2016 on over 1500+ site-projects</li>
+                <li>Ontel has less than a 3% rejection rate for 2014-2016 on thousands of site-projects</li>
                 <li>We've grown for the last 3 years on the strength of our performance, quality, and cost reduction (over 50% in some cases)</li>
               </ul>
             </div>
