--- a/views/pricing.html
+++ b/views/pricing.html
@@ -11,9 +11,9 @@
           <div>
             <div class="body">
               <ul>
-					<li><span class="price-emphasis">$100</span> for sites or projects 1-10 per year they are active.</li>
-					<li><span class="price-emphasis">$50</span> for sites or projects 1-100 per year they are active.</li>
-					<li><span class="price-emphasis">$25</span> for sites or projects 101-500 per year they are active.</li>
+					<li><span class="price-emphasis">$100 per year active</span> for each site or project between 1-10.</li>
+					<li><span class="price-emphasis">$50 per year active</span> for each site or project between 10-100.</li>
+					<li><span class="price-emphasis">$25 per year active</span> for each site or project between 101-500.</li>
                		<li><span class="price-emphasis">Contact Us</span> for 500+ sites/projects quotes.</li>
               </ul>
             </div>
