--- a/views/main.html
+++ b/views/main.html
@@ -32,7 +32,7 @@
                 <div class="head">We are Close Out Specialists</div>
                 <div class="sub">From the field, to your customer within 24 hours</div>
             </div>
-            <div class="body">With our industry leading close out software, along with our specially trained people, we can get you closed out in near real time. Using a partner like us can improve quality, and decrease cost, simply because we are specalized. How it works is that we take raw files and photos from the field, and then validate, process, and format this data to meet your customer's timelines and desired formatting. We support your teams throughout the project, so that they get the right deliverables submitted on time. When everyhing is verified and processed, we then upload the C.O.P. to your client's portal. We have a low-cost, per site price that our customers love, and for a limited time, you can have your first C.O.P. for free.</div>
+            <div class="body">With our industry leading close out software, custom scripts, and internal apps, we can improve quality, and decrease the costs associated with managing and closing your projects. Our COP services are comprehensive, taking raw files and photos from the field, and processing this data to meet your customer's timelines and desired specifications - all while advising you of discrepancies and issues along the way. </div>
         </div>
         <div class="cta-container">
              <div class="cta" ui-sref="closeout">close out MGMT <i class="icon ion-android-arrow-dropright"></i></div> 
@@ -42,9 +42,10 @@
         <div class="section-content">
             <div class="heading">
                 <div class="head">close out Software</div>
-                <div class="sub">The most powerful close out software in the world, for $25 per site-project.</div>
+                <div class="sub">The most powerful close out software in the world.</div>
             </div>
-            <div class="body">Swift Projects™ combines aspects of products like SharePoint and Dropbox, with added innovation found no where else, to make a mobile friendly, robust, software platform built specifically for running wireless projects and closing them out in real time. Take the first steps toward automating your excuses away by trying out our cloud-based close out software that helps you run projects faster and close them out more profitably. <span class="swift-cta">Find out more about how Swift Projects makes closing out and running your projects better.</span></div>
+            <div class="body">Swift Projects™ allows companies to increase the speed and structure at which they collaborate and close projects. It's a mobile friendly, robust, software platform built specifically for running wireless projects and collecting all of the data along they way, so that your teams can work in real time. Take the first steps toward automating your excuses away. 
+			<span class="swift-cta">Find out more about how Swift Projects makes closing out and running your projects better.</span></div>
         </div>
         <div class="cta" ui-sref="swift">Swift Projects <i class="icon ion-android-arrow-dropright"></i></div>
     </section>
