--- a/views/pricing.html
+++ b/views/pricing.html
@@ -11,9 +11,9 @@
           <div>
             <div class="body">
               <ul>
-					<li><span class="price-emphasis">$100 per year active</span> for each site or project between 1-10.</li>
-					<li><span class="price-emphasis">$50 per year active</span> for each site or project between 10-100.</li>
-					<li><span class="price-emphasis">$25 per year active</span> for each site or project between 101-500.</li>
+					<li><span class="price-emphasis">$100</span> per year active for each site or project between 1-10.</li>
+					<li><span class="price-emphasis">$50</span> per year active for each site or project between 10-100.</li>
+					<li><span class="price-emphasis">$25</span> per year active for each site or project between 101-500.</li>
                		<li><span class="price-emphasis">Contact Us</span> for 500+ sites/projects quotes.</li>
               </ul>
             </div>
@@ -30,9 +30,9 @@
           <div>
             <div class="body">
               <ul>
-                <li><span class="price-emphasis">$225-275</span> per carrier C.O.P. We will take volume, scope, and commitment in mind to provide the best price for your specific need.</li>
-                <li><span class="price-emphasis">$75</span> per L.L. package, Regulatory form, and other add-ons.</li>
-                <li><span class="price-emphasis">$40</span> per revision round. This fee is applied for each round of revision based on undocumented requirements from the customer, punch-item corrections, or missing files.</li>
+                <li><span class="price-emphasis">$225-275</span> per carrier C.O.P.</li>
+                <li><span class="price-emphasis">$75</span> per L.L. package, Regulatory form, or other add-ons.</li>
+                <li><span class="price-emphasis">$40</span> per revision round.</li>
 				<li><span class="price-emphasis">Free</span> for your first C.O.P.</li>
               </ul>
             </div>
@@ -45,7 +45,7 @@
     <div class="section">
       <div class="heading">Quoted Prices</div>
       <div class="content">
-       All site development and implementation management services as referenced on or MGMT page are quoted or bid upon request. We are happy to provide a clear and value driven response to requests for quotation.  
+       All management consulting services are quoted upon request. We are happy to provide a clear and value driven response to requests for quotation.  
       </div>
     </div>
   </div>
