--- a/views/pricing.html
+++ b/views/pricing.html
@@ -14,7 +14,7 @@
 					<li><span class="price-emphasis">$100</span> per year active for each site or project between 1-10.</li>
 					<li><span class="price-emphasis">$50</span> per year active for each site or project between 10-100.</li>
 					<li><span class="price-emphasis">$25</span> per year active for each site or project between 101-500.</li>
-               		<li><span class="price-emphasis">Contact Us</span> for 500+ sites/projects quotes.</li>
+               		<li><span class="price-emphasis">Contact Us</span> for 500+</li>
               </ul>
             </div>
           </div>
