--- a/views/pricing.html
+++ b/views/pricing.html
@@ -11,9 +11,9 @@
           <div>
             <div class="body">
               <ul>
-					<li><span class="price-emphasis">$100</span> per year active for each site or project between 1-10.</li>
-					<li><span class="price-emphasis">$50</span> per year active for each site or project between 10-100.</li>
-					<li><span class="price-emphasis">$25</span> per year active for each site or project between 101-500.</li>
+					<li><span class="price-emphasis">$100/yr</span> for each active asset-project or standlone project between 1-10.</li>
+					<li><span class="price-emphasis">$50/yr</span> for each active asset-project or standlone project between 10-100.</li>
+					<li><span class="price-emphasis">$25/yr</span> for each active asset-project or standlone project between 101-500.</li>
                		<li><span class="price-emphasis">Contact Us</span> for 500+</li>
               </ul>
             </div>
@@ -30,8 +30,8 @@
           <div>
             <div class="body">
               <ul>
-                <li><span class="price-emphasis">$225-275</span> per carrier C.O.P.</li>
-                <li><span class="price-emphasis">$75</span> per L.L. package, Regulatory form, or other add-ons.</li>
+                <li><span class="price-emphasis">$225-400</span> per carrier C.O.P. up to 2 antennas per sector. 1.5-2.0x the rate for larger sites.</li>
+                <li><span class="price-emphasis">$75</span> per L.L. package, Regulatory form, or other add-on.</li>
                 <li><span class="price-emphasis">$40</span> per revision round.</li>
 				<li><span class="price-emphasis">Free</span> for your first C.O.P.</li>
               </ul>
