--- a/views/pricing.html
+++ b/views/pricing.html
@@ -11,9 +11,9 @@
           <div>
             <div class="body">
               <ul>
-					<li><span class="price-emphasis">$100/yr</span> for each active asset-project or standlone project between 1-10.</li>
-					<li><span class="price-emphasis">$50/yr</span> for each active asset-project or standlone project between 10-100.</li>
-					<li><span class="price-emphasis">$25/yr</span> for each active asset-project or standlone project between 101-500.</li>
+					<li><span class="price-emphasis">$100/yr</span> for each active asset-project or standalone project between 1-10.</li>
+					<li><span class="price-emphasis">$50/yr</span> for each active asset-project or standalone project between 10-100.</li>
+					<li><span class="price-emphasis">$25/yr</span> for each active asset-project or standalone project between 101-500.</li>
                		<li><span class="price-emphasis">Contact Us</span> for 500+</li>
               </ul>
             </div>
