Update to about

--- a/views/about.html
+++ b/views/about.html
@@ -6,8 +6,7 @@
   <div class="product-container">
     <div class="section intro">
       <div class="content">
-        Founded in August of 2013, Ontel is a Washington D.C. based consulting company that provides software and site-development related management services to telecommunication contractors, engineering firms, real estate specialists, and project management companies. We specialize in applying technology to project and construction management, so reach out if you want to talk further about the industry, or technology in general!  
-		
+        Founded in August of 2013, Ontel is a Washington D.C. based management and IT firm that provides technical project management and IT solutions for telecommunication infrastructure services providers and network operators. We specialize in the application of IT to project and construction management tasks covering the entire wireless site-development lifecycle.
       </div>
     </div>
     <div class="section">
