--- a/views/main.html
+++ b/views/main.html
@@ -32,7 +32,7 @@
                 <div class="head">We are Close Out Specialists</div>
                 <div class="sub">From the field, to your customer within 24 hours</div>
             </div>
-            <div class="body">With our industry leading close out software, custom scripts, and internal apps, we can improve quality, and decrease the costs associated with managing and closing your projects. Our COP services are comprehensive, taking raw files and photos from the field, and processing this data to meet your customer's timelines and desired specifications - all while advising you of discrepancies and issues along the way. </div>
+            <div class="body">With our industry leading close out software, custom scripts, and internal apps, Ontel can manage the COP lifecycle with unparalleled accuracy, speed, and cost. Our COP services are comprehensive, taking raw files and photos from the field and processing this data to meet carrier specifications and timelines. We are trusted by industry leading carriers and contractors throughout the U.S to analyze, validate, and close their telecommunication projects faster and better.  </div>
         </div>
         <div class="cta-container">
              <div class="cta" ui-sref="closeout">close out MGMT <i class="icon ion-android-arrow-dropright"></i></div> 
@@ -44,7 +44,7 @@
                 <div class="head">close out Software</div>
                 <div class="sub">The most powerful close out software in the world.</div>
             </div>
-            <div class="body">Swift Projects™ allows companies to increase the speed and structure at which they collaborate and close projects. It's a mobile friendly, robust, software platform built specifically for running wireless projects and collecting all of the data along they way, so that your teams can work in real time. Take the first steps toward automating your excuses away. 
+            <div class="body">Swift Projects™ allows companies to increase the speed and structure at which they collaborate and close their projects. It's a mobile friendly, robust, software platform built specifically for running wireless projects and collecting all of the data necessary to close them along they way, enabling teams to scal and can work in real time. Take the first steps toward automating your excuses away. 
 			<span class="swift-cta">Find out more about how Swift Projects makes closing out and running your projects better.</span></div>
         </div>
         <div class="cta" ui-sref="swift">Swift Projects <i class="icon ion-android-arrow-dropright"></i></div>
