--- a/views/closeout.html
+++ b/views/closeout.html
@@ -9,7 +9,7 @@
       <div class="heading">Give us your raw site files and we'll close you out</div>
       <div class="content">
         <p>
-         No other company focuses as much on the close out process - it's our specialization in this area that our clients rely on to keep on top of the expanding demands and shortened timelines their customers expect. This simple item, the close out package, has the power to make or break your success, convert bid awarders into your corner, and get you paid. So we built a service that does this better than its ever been done before.
+         No other company focuses as much on the close out process - it's our specialization in this area that our clients rely on to keep on top of the expanding demands and shortened timelines their customers and operations teamss expect. This simple item, the close out package, has the power to make or break your success, convert bid awarders into your corner, and get you paid. So we built a service that does this better than its ever been done before.
         </p>
       </div>
     </div>
@@ -18,7 +18,7 @@
     <div class="section">
       <div class="heading">Cheaper, Faster, Better - at the same time</div>
       <div class="content">
-        <span>Technology is our edge. Our in-house developed software like Swift Projects, and custom apps automate things like Anritsu Sweep processing and validation, RET forms, RF Summaries etc. This introduces accuracy and speed gains an order of magnitude better than current manual processes. Our people, matched with this technological capability, enables us to provide our clients with a critical business solution at a reasonable rate.</span>
+        <span>Technology is our edge. Our in-house developed software like Swift Projects, along with our portfolio of custom apps automate things like Sweep, Fiber, PIM, Photo, and RET processing and validation and data entry. Our software and in the hands of our experienced technicans introduce a level of accuracy and speed an order of magnitude better than current manual processes and easily compete with traditional implementation management methodologies. Our people, matched with this technological capability, enables us to provide our clients with a critical business solution at the lowest costs possible.</span>
         <div class="feature-flex col-flex list-with-desc">
           <div>
             <div class="title">Benefits</div>
@@ -26,7 +26,7 @@
               <ul>
                 <li>
                   <i class="icon ion-checkmark"></i>
-                  <span>Our services get C.O.P.'s in fast and professionally, which helps you grow market share by signalling to the customer that you're ready to handle more</span>
+                  <span>Our services get C.O.P.'s in fast and professionally, which helps carriers turn up and close their projects faster.</span>
                 </li>
                 <li>
                   <i class="icon ion-checkmark"></i>
@@ -39,8 +39,8 @@
             <div class="title">Results</div>
             <div class="body">
               <ul>
-                <li>Ontel has less than a 3% rejection rate for 2014-2016 on thousands of site-projects</li>
-                <li>We've grown for the last 3 years on the strength of our performance, quality, and cost reduction (over 50% in some cases)</li>
+                <li>Ontel is the official COP management company for a number of the leading carriers and General Contractors throughout the U.S</li>
+                <li>We close 99% of our sites within 1 business day.</li>
               </ul>
             </div>
           </div>
