--- a/views/main.html
+++ b/views/main.html
@@ -32,7 +32,7 @@
                 <div class="head">We are Close Out Specialists</div>
                 <div class="sub">From the field, to your customer within 24 hours</div>
             </div>
-            <div class="body">With our industry leading close out software, custom scripts, and internal apps, Ontel can manage the COP lifecycle with unparalleled accuracy, speed, and cost. Our COP services are comprehensive, taking raw files and photos from the field and processing this data to meet carrier specifications and timelines. We are trusted by industry leading carriers and contractors throughout the U.S to analyze, validate, and close their telecommunication projects faster and better.  </div>
+            <div class="body">With our industry leading close out software, custom scripts, and internal apps, Ontel can manage the C.O.P. lifecycle with unparalleled accuracy, speed, and cost. Our C.O.P. services are comprehensive, taking raw files and photos from the field and processing this data to meet carrier specifications and timelines in near real-time. We are trusted by industry leading carriers and contractors throughout the U.S to analyze, validate, and close their telecommunication projects faster and better. There is no other company in the industry that closes as many sites as fast and accurately as Ontel.  </div>
         </div>
         <div class="cta-container">
              <div class="cta" ui-sref="closeout">close out MGMT <i class="icon ion-android-arrow-dropright"></i></div> 
