--- a/views/main.html
+++ b/views/main.html
@@ -44,7 +44,7 @@
                 <div class="head">close out Software</div>
                 <div class="sub">The most powerful close out software in the world.</div>
             </div>
-            <div class="body">Swift Projects™ allows companies to increase the speed and structure at which they collaborate and close their projects. It's a mobile friendly, robust, software platform built specifically for running wireless projects and collecting all of the data necessary to close them along they way, enabling teams to scal and can work in real time. Take the first steps toward automating your excuses away. 
+            <div class="body">Swift Projects™ allows operators and site-development firms to scale and increase the speed and structure at which they collaborate and close their projects. It's a mobile friendly, robust, software platform built specifically for running wireless projects and collecting all of the data necessary to close them along they way. Take the first steps toward automating your excuses away. 
 			<span class="swift-cta">Find out more about how Swift Projects makes closing out and running your projects better.</span></div>
         </div>
         <div class="cta" ui-sref="swift">Swift Projects <i class="icon ion-android-arrow-dropright"></i></div>
