--- a/views/closeout.html
+++ b/views/closeout.html
@@ -9,7 +9,7 @@
       <div class="heading">Give us your raw site files and we'll close you out</div>
       <div class="content">
         <p>
-         No other company focuses as much on the close out process - it's our specialization in this area that our clients rely on to keep on top of the expanding demands and shortened timelines their customers and operations teams expect. This simple item, the close out package, has the power to make or break your success, convert bid awarders into your corner - and we have built a service that does this better than its ever been done before.
+         No other company focuses as much on the close out process - it's our specialization in this area that our clients rely on to keep on top of the expanding demands and shortened timelines their customers and operations teams expect. This simple item, the close out package, has the power to make or break your success, and convert bid awarders into your corner - but so many people fail to do close effectively. So we have built a service that does this better than its ever been done before, preventing return visits, and shortening project lifecycles along the way.
         </p>
       </div>
     </div>
