--- a/views/closeout.html
+++ b/views/closeout.html
@@ -18,7 +18,7 @@
     <div class="section">
       <div class="heading">Cheaper, Faster, Better - at the same time</div>
       <div class="content">
-        <span>Technology is our edge. Our in-house developed software like Swift Projects, along with our portfolio of custom apps automate things like Sweep, Fiber, PIM, Photo, and RET processing and validation and data entry. Our software and in the hands of our experienced technicans introduce a level of accuracy and speed an order of magnitude better than current manual processes and easily compete with traditional implementation management methodologies. Our people, matched with this technological capability, enables us to provide our clients with a critical business solution at the lowest costs possible.</span>
+        <span>Technology is our edge. Our in-house developed software like Swift Projects, along with our portfolio of custom apps automate things like Sweep, Fiber, PIM, Photo, and RET processing, validation, and data entry. Our software and in the hands of our experienced technicans introduce a level of accuracy and speed an order of magnitude better than current manual processes and easily compete with traditional implementation management methodologies. Our people, matched with this technological capability, enables us to provide our clients with a critical business solution at the lowest costs possible.</span>
         <div class="feature-flex col-flex list-with-desc">
           <div>
             <div class="title">Benefits</div>
