--- a/views/closeout.html
+++ b/views/closeout.html
@@ -39,7 +39,7 @@
             <div class="title">Results</div>
             <div class="body">
               <ul>
-                <li>Ontel is the official COP management company for a number of the leading carriers and General Contractors throughout the U.S</li>
+                <li>Ontel is the official C.O.P. management company for a number of the leading carriers and general contractors throughout the U.S</li>
                 <li>We close 99% of our sites within 1 business day.</li>
               </ul>
             </div>
