--- a/views/closeout.html
+++ b/views/closeout.html
@@ -9,7 +9,7 @@
       <div class="heading">Give us your raw site files and we'll close you out</div>
       <div class="content">
         <p>
-         No other company focuses as much on the close out process - it's our specialization in this area that our clients rely on to keep on top of the expanding demands and shortened timelines their customers and operations teams expect. This simple item, the close out package, has the power to make or break your success, and convert bid awarders into your corner - but so many people fail to do close effectively. So we have built a service that does this better than its ever been done before, preventing return visits, and shortening project lifecycles along the way.
+         No other company focuses as much on the close out process. Our specialization and technology help you to prevent return visits by enabling live review and collaboration of data in a structured and real time way, whether in the field or at homebase.
         </p>
       </div>
     </div>
@@ -18,7 +18,7 @@
     <div class="section">
       <div class="heading">Cheaper, Faster, Better - at the same time</div>
       <div class="content">
-        <span>Technology is our edge. Our in-house developed software like Swift Projects, along with our portfolio of custom apps automate things like Sweep, Fiber, PIM, Photo, and RET processing, validation, and data entry. Our software and in the hands of our experienced technicans introduce a level of accuracy and speed an order of magnitude better than current manual processes and easily compete with traditional implementation management methodologies. Our people, matched with this technological capability, enables us to provide our clients with a critical business solution at the lowest costs possible.</span>
+        <span>Technology is our edge. Our in-house developed software like Swift Projects, along with our portfolio of custom apps automate things like Sweep, Fiber, PIM, Photo, and RET processing, validation, and data entry. Our software in the hands of our experienced technicans introduce a level of accuracy and speed an order of magnitude better than current manual processes.</span>
         <div class="feature-flex col-flex list-with-desc">
           <div>
             <div class="title">Benefits</div>
@@ -26,11 +26,11 @@
               <ul>
                 <li>
                   <i class="icon ion-checkmark"></i>
-                  <span>Our services get C.O.P.'s in fast and professionally, which helps carriers turn up and close their projects faster.</span>
+                  <span>Our services get C.O.P.'s in fast and professionally, decreasing project costs and timelines in an immediate, direct, and measurable way.</span>
                 </li>
                 <li>
                   <i class="icon ion-checkmark"></i>
-                  <span>Our customers improve cash-flow by reducing rejections and return visit costs, and by cutting the length of time to invoice acceptance</span>
+                  <span>Our customers and their partners improve cash-flow by cutting the length of time to operations and invoice acceptance.</span>
                 </li>
               </ul>
             </div>
@@ -39,7 +39,7 @@
             <div class="title">Results</div>
             <div class="body">
               <ul>
-                <li>Ontel is the official C.O.P. management company for a number of the leading carriers and general contractors throughout the U.S</li>
+                <li>Ontel is the official C.O.P. management company for a number of leading carriers and general contractors throughout the U.S</li>
                 <li>We close 99% of our sites within 1 business day.</li>
               </ul>
             </div>
@@ -58,7 +58,7 @@
             <div class="body">
               <ul>
                 <li>Tell us about your project and share your project specification documents
-                <li>Provide an example C.O.P. that the customer likes, or we can help to create a gold standard if needed</li>
+                <li>Provide an example C.O.P., or we can help to create a gold standard if needed</li>
               </ul>
             </div>
           </div>
