--- a/views/swift.html
+++ b/views/swift.html
@@ -11,13 +11,13 @@
   </div>
   <div class="product-container desktop-display">
     <div class="section intro">
-      <div class="heading">Want more sales? Close out faster</div>
-		<div class="content">
-			<p>Swift Projects is specially made to end the nightmare of closing out telecommunication construction projects in real time. With Swift, we can prevent return visits, give your management real time access to photos and videos from the field, design and manage project workflows with detailed file requirements, and automate administration and tracking. If you use a spreadsheet and a shared-drive to manage your files and workflow, then we really need to talk.
+      <div class="heading">Close Projects Faster</div>
+		 class="content">
+			<p>Swift Projects puts the power to design, run, and close wireless multiple projects simultaneously into the palm of your hand. With a phone or browser, Swift Projects™ enables you to design detailed project workflows with 3 simple building blocks. Those blocks then automate administrative and management tasks like status updates, scheduling, uploading and downloading, and relabelling files. Most importantly for our clients, Swift Projects eliminates mistakes and waste related with sharing and collaborating ineffectively.
 			<p>
 		</div>
 		<div class="content">
-			<p>Swift Projects is built on Amazon S3 and Google services with a modern software stack that glues it all together. What this means for you and your IT teams is that your data is safe, encrypted, and backed by the leading server, database, client, and authentication services.
+			<p>Swift Projects™ allows our clients to share photos and videos from the field and put them directly into QA approval process live for multiple simultaneous reviewers to access in real time. What Swift Projects™ does for your organization is more than just organizing projects and their workflows, it helps organizations implement best practices and standardization of quality at scale in an immediate way.
 			<p>
 		</div>
       <a class="get-started" href="https://swiftprojects.io">
