--- a/views/swift.html
+++ b/views/swift.html
@@ -12,8 +12,8 @@
   <div class="product-container desktop-display">
     <div class="section intro">
       <div class="heading">Close Projects Faster</div>
-		 class="content">
-			<p>Swift Projects puts the power to design, run, and close wireless multiple projects simultaneously into the palm of your hand. With a phone or browser, Swift Projects™ enables you to design detailed project workflows with 3 simple building blocks. Those blocks then automate administrative and management tasks like status updates, scheduling, uploading and downloading, and relabelling files. Most importantly for our clients, Swift Projects eliminates mistakes and waste related with sharing and collaborating ineffectively.
+		<div class="content">
+			<p>wift Projects puts the power to design, run, and close wireless multiple projects simultaneously into the palm of your hand. With a phone or browser, Swift Projects™ enables you to design detailed project workflows with 3 simple building blocks. Those blocks then automate administrative and management tasks like status updates, scheduling, uploading and downloading, and relabelling files. Most importantly for our clients, Swift Projects eliminates mistakes and waste related with sharing and collaborating ineffectively
 			<p>
 		</div>
 		<div class="content">
