--- a/views/swift.html
+++ b/views/swift.html
@@ -17,7 +17,7 @@
 			<p>
 		</div>
 		<div class="content">
-			<p>Swift Projects™ allows our clients to share photos and videos from the field and put them directly into QA approval process live for multiple simultaneous reviewers to access in real time. What Swift Projects™ does for your organization is more than just organizing projects and their workflows, it helps organizations implement best practices and standardization of quality at scale in an immediate way.
+			<p>Swift Projects™ also allows our clients to share photos and videos from the field and put them directly into a QA approval process for multiple simultaneous reviewers to access in real time. What Swift Projects™ does for your organization is more than just organizing projects and their workflows, it helps organizations implement best practices and standardization of quality at scale in an immediate way.
 			<p>
 		</div>
       <a class="get-started" href="https://swiftprojects.io">
