Disable Pricing in views

--- a/views/closeout.html
+++ b/views/closeout.html
@@ -148,12 +148,12 @@
       </div>
     </div>
   </div>
-  <div class="pricing-section">
+  <!--<div class="pricing-section">
     <div class="cta">Discover the Ontel Edge</div>
     <div class="pricing-btn" ui-sref="pricing">
       <span>Pricing</span>
       <div class="icon ion-android-arrow-dropright"></div>
     </div>
-  </div>
+  </div>-->
 </div>
 <site-footer></site-footer>
