--- a/views/gear.html
+++ b/views/gear.html
@@ -62,12 +62,12 @@
       </div>
     </div>
   </div>
-  <div class="pricing-section">
+  <!--<div class="pricing-section">
     <div class="cta">Close Out with the latest tech</div>
     <div class="pricing-btn" ui-sref="pricing">
       <span>Pricing</span>
       <div class="icon ion-android-arrow-dropright"></div>
     </div>
-  </div>
+  </div>-->
 </div>
 <site-footer></site-footer>
